# pokecard_masters

./: .gitignore  CLAUDE.md  Readme.md  pyproject.toml
.github/workflows/: test.yaml  testci.yaml
app_expo/: package-lock.json  package.json
app_expo/app-pokemasters/: .env.example  app.json  package-lock.json  (+1 more)
project/: .env  .env.example  db.sqlite3  import_cards.py  manage.py  pyproject.toml
project/app/: admin.py  api.py  authentification.py  forms.py  models.py  test_zitadel_api.py  tests.py  urls.py  views.py  zitadel_service_key.json
project/app/.github/workflows/: test.yaml
project/app/migrations/: 0001_initial.py  0002_add_user.py  0002_card_card_user.py  0002_rename_choice_user.py  0003_pokemon.py  0003_pokemon_rarity_card.py  0003_remove_card_card_user_playercard.py  0004_alter_pokemon_user_id.py  0004_user_user_id_alter_user_password.py  0005_alter_user_password.py  0005_remove_pokemon_user_id_pokemon_user_id.py  0006_alter_user_email.py  0006_user_account.py  0007_user_last_booster_opened.py  0008_card_type.py  0008_user_booster_count.py  0009_card_booster_count.py  0009_rename_type_card_types.py  0010_cardset_card_description_card_evolution_and_more.py  0010_remove_card_booster_count.py  0011_alter_card_description_alter_card_evolve_from_and_more.py  0012_merge_20260407_1405.py  0013_alter_card_hp.py  0013_user_pseudo.py  0014_alter_card_hp.py  0014_playercard_updated_at.py  0015_user_region.py
project/app/templates/: index.html  landing.html  register.html
project/app/test/: test_api.py  test_views.py
project/project/: settings.py  urls.py
(+43 files in other folders)
